# backtesting.py

./: pyproject.toml  setup.py
backtesting/: _stats.py  backtesting.py
backtesting/test/: _test.py
