[tool.poetry]
name = "Backtesting"
version = "0.1.0"
description = "Backtest trading strategies in Python"
license = "AGPL-3.0"
authors = ["Zach Lûster"]
url = "https://algoets.github.io/backtesting.py/"

[tool.poetry.dependencies]
python = ">=3.6"
numpy = ">=1.17.0"
pandas = { version = ">=0.25.0", not = "0.25.0" }
bokeh = ">=1.4.0"

[tool.poetry.extras]
doc = [
    "pdoc3",
    { version = ">=1.3", package = "jupytext" },
    "nbconvert",
    "ipykernel",
    "jupyter_client",
]
test = [
    "seaborn",
    "matplotlib",
    { version = "<=1.1.3", package = "scikit-learn" },
    "scikit-optimize",
]
dev = [
    "ruff==0.0.160",
    "coverage",
    "mypy",
]

[tool.poetry.scripts]
backtest = "backtesting.cli:main"

[tool.poetry.build]
publish = true

[tool.poetry.publish]
repository = "pypi"



[tool.ruff]
exclude = [
    '.git',
    '.eggs',
    '__pycache__',
    'doc/examples',
]
ignore = [
    'UP006',
    'UP007',
    'UP009',
    'N802',
    'N806',
    'C901',
    'B008',
    'B011',
    'RUF002',
]
line-length = 100
select = [
    'I',
    'E',
    'F',
    'W',
    'UP',
    'N',
    'C',
    'B',
    'T',
    'RUF',
    'YTT',
]

[tool.ruff.pep8-naming]
ignore-names = [
    'l',
    'h',
]